test/test_units/test_kclvm/test_types/invalid_test_data/schema/pkg/pkg.k
schema Person:
    name: str = "Alice"
    age: int = 18

Base = 1

schema PersonMixin:
    nameUpper: str = name.upper()
